fixed spacing completed project landing page

--- a/styles.css
+++ b/styles.css
@@ -64,25 +64,25 @@ nav {
 }
 
 .hero-title {
-    padding: 48px;
+    font-size: 50px;
+    padding: 5px;
     color: #F9FAF8;
     font-weight: 900;
-    margin-bottom: 20px;
     line-height: 1.2;
 }
 
 .hero-subtitle {
-    padding: 18px;
+    padding: 5px;
     color: #E5E7EB;
-    margin-bottom: 30px;
     line-height: 1.5;
+    padding-bottom: 10px;
 }
 
 .sign-up {
     background-color: #3882F6;
     color: white;
     border: none;
-    padding: 10px 30px;
+    padding: 10px 35px;
     border-radius: 8px;
     font-size: 18px;
     font-weight: 700;
@@ -115,6 +115,7 @@ nav {
 }
 
 .info-title {
+    font-size: 35px;
     padding: 36px;
     color: #1F2937;
     font-weight: 900;
@@ -154,16 +155,20 @@ nav {
 .quote .container {
     display: flex;
     flex-direction: column;
+    max-width: 700px;
+    
 }
 
 .quote-text { 
+    font-size: 25px;
     padding: 36px;
     color: #1F2937;
     font-weight: 300;
 }
 
 .quote-author {
-    padding: 20px;
+    font-size: 25px;
+    padding: 15px;
     color: black;
     font-weight: 700;
     text-align: right;
@@ -172,13 +177,15 @@ nav {
 }
 
 .cta {
-    padding: 80px 0;
+    padding: 80px;
     background-color: white;
+    display: flex;
+    justify-content: center;
+    
 }
 
 .cta-banner {
     background-color:#3882F6 ;
-    width: 700px;
     padding: 50px;
     border-radius: 10px;
     display: flex;
@@ -186,6 +193,9 @@ nav {
     align-items: center;
     flex-wrap: wrap;
     gap: 30px;
+
+    width: 100%;         /* make it expand */
+    max-width: 900px;     /* controls how long it gets */
 }   
 
 .cta-text h3 {
